<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pl">
    <string name="privacy_policy_text">Polityka Prywatności</string>
    <string name="regulations_text">Regulamin</string>
    <string name="open_source_libs_text">Licencje typu open source</string>
    <string name="about_text">Aplikacja „Na 4 Łapy” to świetne narzędzie, które pomoże Ci wybrać odpowiedniego dla Ciebie pupila.
        Chcesz dużego psa? A może szukasz kota? Ma to być zwierzę aktywne, czy chcesz typowego domowego pieszczocha?
        Określ swoje preferencje, a „Na 4 Łapy” dopasuje dla Ciebie czworonoga, którego możesz adoptować ze schroniska.
        Nie ograniczasz się do jednego miasta i schroniska? Nie martw się, niebawem „Na 4 Łapy” współpracować będzie z większą liczbą schronisk.
        \n\nTa aplikacja w 3 prostych krokach umożliwi Ci także wpłacenie drobnej kwoty na schronisko.
        To dzięki takim datkom schronisko funkcjonuje, a mieszkające tam zwierzaki otrzymują jedzenie, leki i opiekę.
        Wpłata może być jednorazowa, do niczego nie zobowiązuje, operatorzy zrzekli się prowizji i całość pieniędzy wpływa na konto schroniska.
        \n\nNieustanie staramy się rozwijać, dodawać nowe funkcjonalności, zostań z nami na dłużej i pomagaj zwierzakom.
        \n\nBądź aktywny, bądź wrażliwy, jeżeli nie Ty to kto?
    </string>
    <string name="about_email_office">Biuro: kontakt@na4lapy.org</string>
    <string name="about_email_tech_help">Pomoc techniczna: pomoc@na4lapy.org</string>
    <string name="app_website_link"><a href="http://www.na4lapy.org">Strona www o aplikacji</a></string>
    <string name="app_facebook_link"><a href="https://web.facebook.com/Na-4-Łapy-1759865620949415">Facebook Na 4 Łapy</a></string>
    <string name="version">Wersja: %1$s</string>
    <string name="about_shelter_page_title">O schronisku - %1$s</string>
    <string name="shelter_address_label">Adres:</string>
    <string name="shelter_email_label">Adres e-mail:</string>
    <string name="shelter_phone_label">Numer telefonu:</string>
    <string name="shelter_www_label">Strona WWW:</string>
    <string name="shelter_account_label">Numer konta bankowego:</string>
    <string name="shelter_address_template">%1$s %2$s\n%3$s %4$s</string>
    <string name="shelter_adoption_rules_label">Zasady adopcji:</string>
    <string name="app_name">Na 4 Łapy</string>
    <string name="browsing">Przeglądaj</string>
    <string name="favouritiesList">Lista ulubionych</string>
    <string name="lookupPreferences">Preferencje</string>
    <string name="aboutApplication">O aplikacji</string>
    <string name="aboutShelter">O schroniskach</string>
    <string name="donate_us">Pomóż nam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="whatKindOfAnimalDoYouSeek">Jakiego zwierzaka szukasz?</string>
    <string name="type">Typ</string>
    <string name="gender">Płeć</string>
    <string name="age">Wiek</string>
    <string name="size">Rozmiar</string>
    <string name="activity">Aktywność</string>
    <string name="from">od</string>
    <string name="to">do</string>
    <string name="dialog_age_picker_title_minimal">Minimalny wiek zwierzęcia</string>
    <string name="dialog_age_picker_title_maximal">Maksymalny wiek zwierzęcia</string>
    <string name="save">Zapisz</string>
    <string name="choose">Wybierz</string>
    <string name="cancel">Anuluj</string>
    <string name="tooLittle">Podano za małą liczbę</string>
    <string name="tooMuch">Podano za dużą liczbę</string>
    <string name="save_preferences_message">Preferencje zostały zapisane</string>
    <string name="share">podziel się</string>
    <string name="error_data_cannot_be_loaded">Nie można zsynchronizować danych z serwerem</string>
    <string name="error_data_no_internet_connection">Brak połączenia internetowego</string>
    <string name="error_no_data">Brak danych do wyświetlenia</string>
    <string name="error_no_data_fav">Nie masz jeszcze żadnych ulubionych</string>
    <string name="try_again">Spróbuj ponownie</string>
    <string name="content_desc_error_image">Obraz informujący o błędzie</string>
    <string name="login">Zaloguj się</string>
    <string name="logout">Wyloguj się</string>
    <string name="list_section_all">Wszystkie</string>
    <string name="fav_animals_list_activity">Ulubione</string>
    <string name="animals_list_activity">Dostępne zwierzęta</string>
    <string name="removed_from_fav_undo_mess">Usunięto %1$s z ulubionych</string>
    <string name="removed_from_fav_undo_option">Cofnij</string>
    <string name="content_desc_main_image">zdjęcie główne</string>
    <string name="content_desc_matching_lvl">stopień dopasowania z preferencjami</string>
    <string name="content_desc_animal_size">rozmiar zwierzęcia</string>
    <string name="content_desc_animal_gender">płeć zwierzęcia</string>
    <string name="content_desc_animal_activity">aktywność zwierzęcia</string>
    <string name="details_shelter">Schronisko:</string>
    <string name="details_race">Rasa:</string>
    <string name="details_size">Wielkość:</string>
    <string name="details_gender">Płeć:</string>
    <string name="details_activity">Aktywność:</string>
    <string name="details_training">Ułożenie:</string>
    <string name="details_sterilization">Sterylizacja:</string>
    <string name="details_castration">Kastracja:</string>
    <string name="details_chip">Chip:</string>
    <string name="vaccination_basic">Podstawowe</string>
    <string name="vaccination_extended">Rozszerzone</string>
    <string name="vaccination_none">Brak</string>
    <string name="vaccination_unknown">Nieznane</string>
    <string name="details_vaccination">Szczepienie:</string>
    <string name="details_admittance_date">W schronisku od:</string>
    <string name="activity_high">Wysoka</string>
    <string name="activity_low">Niska</string>
    <string name="activity_unknown">Nieznana</string>
    <string name="gender_male">Samiec</string>
    <string name="gender_female">Samica</string>
    <string name="gender_unknown">Nieznana</string>
    <string name="size_large">Duża</string>
    <string name="size_medium">Średnia</string>
    <string name="size_small">Mała</string>
    <string name="size_unknown">Nieznana</string>
    <string name="training_trainined">Podstawowe</string>
    <string name="training_untrainined">Zaawansowane</string>
    <string name="training_none">Brak</string>
    <string name="training_unknown">Nieznane</string>
    <string name="sterilization_sterilized">Tak</string>
    <string name="sterilization_not_sterilized">Nie</string>
    <string name="sterilization_unknown">Nieznana</string>
    <string name="species_dogs">Psy</string>
    <string name="speciec_cats">Koty</string>
    <string name="species_others">Inne</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="more_info">więcej informacji</string>
    <string name="less_info">mniej informacji</string>
    <string name="introduction_finish">Zrobione</string>
    <string name="introduction_skip">Pomiń</string>
    <string name="introduction_page_1">Poszukiwanie czworonożnego przyjaciela bywa trudne</string>
    <string name="introduction_page_2">Określ swoje potrzeby</string>
    <string name="introduction_page_3">Przeszukaj listę zwierząt poszukujących człowieka</string>
    <string name="introduction_page_4">Zabierz szczęśliwca do domu…</string>
    <string name="introduction_page_5">…Albo daj mu się zaprowadzić</string>
    <string name="photo_by">fot. %s</string>
    <string name="number_of_photo">%1$d / %2$d</string>
    <plurals name="years_from">
        <item quantity="one">%d roku</item>
        <item quantity="other">%d lat</item>
    </plurals>
    <plurals name="months_from">
        <item quantity="one">%d miesiąca</item>
        <item quantity="other">%d miesięcy</item>
    </plurals>
    <plurals name="years_short">
        <item quantity="one">%d rok</item>
        <item quantity="few">%d lata</item>
        <item quantity="other">%d lat</item>
    </plurals>
    <plurals name="months_short">
        <item quantity="one">%d m-c</item>
        <item quantity="few">%d m-ce</item>
        <item quantity="other">%d m-cy</item>
    </plurals>
    <string name="animal_details_title">%1$s, %2$s</string>
    <string name="not_logged_in_message">Ta funkcjonalność wymaga zalogowania</string>
    <string name="not_logged_in_title">Czy chcesz się zalogować?</string>
    <string name="ok">OK</string>
    <string name="go_to_preferences">Zmień preferencje</string>
    <string name="compliance_level_dialog_title">Stopień dopasowania</string>
    <string name="compliance_level_dialog_message">Określa ile cech z preferencji posiada dane zwierze.</string>
    <string name="no_compliance_level_dialog_message">Czy chcesz określić swoje preferencje?</string>
    <string name="no_compliance_level_dialog_title">Brak preferencji</string>
    <string name="later">później</string>
    <string name="validation_error_checked">Zaznaczenie tej opcji jest wymagane</string>
    <string name="validation_error_empty">To pole nie może pozostać puste</string>
    <string name="fullName">Imię i nazwisko</string>
    <string name="email">Adres e-mail</string>
    <string name="streetHouse">Ulica i numer budynku</string>
    <string name="zipCode">Kod pocztowy</string>
    <string name="city">Miasto</string>
    <string name="state">Województwo</string>
    <string-array name="states">
        <item> </item>
        <item>dolnośląskie</item>
        <item>kujawsko-pomorskie</item>
        <item>lubelskie</item>
        <item>lubuskie</item>
        <item>łódzkie</item>
        <item>małopolskie</item>
        <item>mazowieckie</item>
        <item>opolskie</item>
        <item>podkarpackie</item>
        <item>podlaskie</item>
        <item>pomorskie</item>
        <item>śląskie</item>
        <item>świętokrzyskie</item>
        <item>warmińsko-mazurskie</item>
        <item>wielkopolskie</item>
        <item>zachodnipomorskie</item>
    </string-array>
    <string-array name="paymentPageTitles">
        <item>Wybierz kwotę</item>
        <item>Wybierz swój bank</item>
        <item>Podaj swoje dane</item>
        <item>Potwierdź dane do wpłaty</item>
        <item>Dokonaj płatności</item>
        <item>Dziękujemy!</item>
    </string-array>
    <string name="paymentStep">Krok %d z 5</string>
    <string name="buttonNext">Dalej</string>
    <string name="buttonClose">Zamknij</string>
    <string name="paymentValue1">5 zł</string>
    <string name="paymentValue2">20 zł</string>
    <string name="paymentValue3">50 zł</string>
    <string name="paymentTermsAccept">Potwierdzam zapoznanie się i akceptuję regulamin płatności</string>
    <string name="paymentTermsNotAccepted">Aby dokonać wpłaty na rzecz schroniska, musisz zaakceptować regulamin płatności</string>
    <string name="makePayment">Dokonaj wpłaty</string>
    <string name="paymentShelterData">Odbiorca wpłaty</string>
    <string name="paymentUserData">Dane wpłacającego</string>
    <string name="paymentAmount">Wysokość wpłaty</string>
    <string name="paymentType">Sposób płatności</string>
    <string name="paymentBankPageLoading">Trwa otwieranie strony banku…</string>
    <string name="paymentConfirmation">Płatność zakończona sukcesem</string>
    <string name="paymentSuccessSummary">Dziękujemy! Przekazałeś nam %1$d %2$s!</string>
    <string name="paymentsRequestError">Coś poszło nie tak przy przetwarzaniu płatności przez operatora…</string>
    <string name="paymentUserValue">%1$s\n%2$s\n%3$s %4$s\n%5$s</string>
    <string name="paymentAmountValue">%d zł</string>
    <string name="paymentOperator">Operator płatności</string>
    <string name="paymentTerms">Regulamin płatności</string>
    <string name="paymentTypeAB">Alior Bank</string>
</resources>