<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/about_shelter_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/error_container"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_desc_error_image"
            tools:src="@android:drawable/alert_dark_frame" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/error_data_cannot_be_loaded" />

        <Button
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/try_again_btn"
            android:text="@string/try_again" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/about_shelter_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/shelter_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shelter_address_label" />

            <TextView
                android:id="@+id/shelter_address"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:text="Shelter address" />


            <TextView
                android:id="@+id/shelter_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shelter_email_label" />

            <TextView
                android:id="@+id/shelter_email_address"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:text="Shelter email" />


            <TextView

                android:id="@+id/shelter_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shelter_phone_label" />

            <TextView
                android:id="@+id/shelter_phone_number"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:text="Shelter phone number" />


            <TextView
                android:id="@+id/shelter_www_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shelter_www_label" />

            <TextView
                android:id="@+id/shelter_www"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:text="Shelter www" />

            <TextView
                android:id="@+id/shelter_account_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shelter_account_label" />

            <TextView
                android:id="@+id/shelter_account_number"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:text="1215153158463156" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>